<resources>
    <string name="app_name">GTAcampuS</string>
    <string name="action_settings">Settings</string>
    <string name="init_text"><i>PLEASE PROVIDE THE FOLLOWING DETAILS TO INITIALIZE THE APPLICATION. IF YOU SKIP THIS STEP, DEFAULT VALUES WILL BE USED FOR CLASS TIMINGS.</i>\n<b>PLEASE SPEND SOME TIME TO INITIALIZE THE APPLICATION.</b></string>
    <string name="rights">Licensed under GNU GPLv3</string>
    <string name="copyright">Copyright © 2013</string>
    <string name="developer">Godly T.Alias</string>
    <string name="snooze">SNOOZE</string>
    <string name="stop">STOP</string>
    <string name="alarm_title">Custom Alarm</string>
    <string-array name="hourvalues">
        <item >1</item>
        <item >2</item>
        <item >3</item>
        <item >4</item>
        <item >5</item>
        <item >6</item>
        <item >7</item>
        <item >8</item>
        <item >9</item>
        <item >10</item>
    </string-array>
    <string-array name="hours">
        <item >8:00 AM</item>
        <item >8:15 AM</item>
        <item >8:30 AM</item>
        <item >8:45 AM</item>
        <item >9:00 AM</item>
        <item >9:15 AM</item>
        <item >9:30 AM</item>
        <item >9:45 AM</item>
        <item >10:00 AM</item>
        <item >10:15 AM</item>
        <item >10:30 AM</item>
        <item >10:45 AM</item>
        <item >11:00 AM</item>
        <item >11:15 AM</item>
        <item >11:30 AM</item>
        <item >11:45 AM</item>
        <item >12:00 PM</item>
        <item >12:15 PM</item>
        <item >12:30 PM</item>
        <item >12:45 PM</item>
        <item >1:00 PM</item>
        <item >1:15 PM</item>
        <item >1:30 PM</item>
        <item >1:45 PM</item>
        <item >2:00 PM</item>
        <item >2:15 PM</item>
        <item >2:30 PM</item>
        <item >2:45 PM</item>
        <item >3:00 PM</item>
        <item >3:15 PM</item>
        <item >3:30 PM</item>
        <item >3:45 PM</item>
        <item >4:00 PM</item>
        <item >4:15 PM</item>
        <item >4:30 PM</item>
        <item >4:45 PM</item>
        <item >5:00 PM</item>
        <item >5:15 PM</item>
        <item >5:30 PM</item>
        <item >5:45 PM</item>
        <item >6:00 PM</item>
        <item >7:00 PM</item>
        <item >8:00 PM</item>
    </string-array>
    <string-array name="week">
        <item >MON</item>
        <item >TUE</item>
        <item >WED</item>
        <item >THU</item>
        <item >FRI</item>
    </string-array>
    <string-array name="conv_category">
        <item >LENGTH</item>
        <item >MASS</item>
        <item >SPEED</item>
        <item >AREA</item>
        <item >VOLUME</item>
        <item >TIME</item>
        <item >TEMPERATURE</item>
        <item> DIGITAL STORAGE</item>
        <item >FUEL CONSUMPTION</item>
        <item >ENERGY</item>
        <item >PRESSURE</item>
        <item >POWER</item>
    </string-array>
    <string name="zero">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="convertor">CONVERTOR</string>
    <string name="nextalert">NEXT ALERT</string>
    <string name="emptystring"/>
    <string name="help">
   GTAcampuSv1.1 consists of features like alerts, time-table of classes, notes, convertor and calculator.\n
\n<b><u>INITIALIZE</u></b>\n
\tOn installing the application you will be requested to initialize the application. The values you enter can\'t be changed later unless you re-install the application. You will be asked to set the master password also which should not be forgotten, if you forget the password then you need to re-install the application and set the password again in order to access administrator features.\n
\n\n<b><u>MENU ITEMS</u></b>
\n  1. EXIT\n
\tOn clicking on this menu item you will be able to exit the application\n
\n	2. BACKUP\n
\tThis menu feature helps you to backup the whole database of your application so that you will be able to restore your alerts, courses and notes. Backup will be made in your SD card as a folder named \'GTAcampuS\'. The files in that folder should not be deleted/edited.\n
\n  3. RESTORE\n
\tThis menu feature restores the application which restores the deleted alerts, courses and notes if you have a backup in your SD card. If the backup folder in your SD card is corrupted by any external activities, the application will fail to restore the database successfully. On restoring you will lost all the current data except notes. If you had initialized your application with different timings than in the backup made, on restoring the timings will be changed to that given in the backup image.\n
\n  4. SETTINGS\n
\tThis menu feature includes options to turn on/off course alerts, notifications and also an option to change your master password. You can also set how much time before the course time you need to get alert, the snooze-timeout for course alerts and also interval length which will help you to avoid getting alerts for classes following breaks with the entered duration. Application will skip alerting for the course only if you hadn\'t bunked the previous class.\n
\nIf you are stopping course alerts pressing the \'On the way\' button of course alert window, then application will turn off the volumes of your device and also will turn off the course alerts by itself so that your device won\'t make any disturbances in class. After the class-time application itself will set back the device sounds to maximum and will turn on the course alerts.\n

\n\n<b><u>ALERTS</u></b>\n
\tYou can set custom tasks / alarms in addition to the course alerts which are set by default on entering the course details. If you want to update any options of alerts like snooze time-out, math-mode, shake-mode, enable/disable etc., you can get the options window of the alert  by clicking on the respective alert, in case of course alerts go to settings menu. On launching the alerts the alarm tone start from a low volume which will increase gradually to the maximum. If the alarm volume is set at level 1 then application won\'t increase the volume of alarm and will alert in the same volume until user input is received.\n
\n<b>SHAKE MODE</b>\n
\tIf you set this mode enabled, then you will be able to snooze your alarm by just shaking the device\n
\n<b>MATH MODE</b>\n
\tIf this mode is set enabled, on stopping an alert application will put up a single digit multiplication problem and you need to solve the problem correctly in order to stop the alert\n
\n<b>CUSTOM TASKS</b>\n
\tIf you set a task with a past time, you won\'t get alert ever even though the alert is enabled. An alert of type \'task\' will be automatically disabled on launching the alert, so if you need to set an alert again with the same task item, you need to re-enable the alert, else you won\'t get the alert.\n
\n\n<b><u>TIME TABLE</u></b>\n
\tThis consists of the full view of your weekly class hours. Free hours are represented by a \'-\' symbol which will be replaced by course names on adding a course. The no:of hours is set on initializing the application which can\'t be changed later. You can see the course details and bunk count by a long click on the corresponding course.\n
\n\n<b><u>COURSES</u></b>\n
\tIn the course tab you will be able to add courses. Here you will have to enter the course name, code and teacher\'s name which can\'t be edited later. In the time-table view courses will appear in the corresponding timings you enter here.\n
\n\n<b><u>NOTES</u></b>\n
\tUsing this option you can make short notes or memos which can be read later. You will be able to edit the note later by a long click on the respective note.\n
\n\n<b><u>BUNK-O-METER</u></b>\n
\tBunk-O-Meter stores your bunk statistics. It will display the course name as well as the no:of classes bunked. If you click on the respective course you will be able to see the date and the system time at which you added the bunk to the course. If you just want to add a bunk to a course, you can increment bunk count to a course by a long click on the respective course.\n
\n\n<b><u>CONVERTOR</u></b>\n
\tThis tool helps you to convert values from one unit to other. You can select the main section in the drop-down menu on top and the units to be converted in the drop-down menu in the bottom. Convertor will automatically put results at the moment you press the done button of the virtual keyboard. If the results are big numbers it will come in the exponent format (base E power).\n
\n\n<b><u>CALCULATOR</u></b>\n
\tThis calculator can deal calculations with very big digits. If the results are big numbers it will come in the exponent format (base E power). The final result will be toasted also. The calculator also includes options for finding GCD(Greatest Common Divisor - HCF) and LCM(Least Common Multiple).\n
\n\n<b><u>MESSAGE</u></b>\n
\tThis can be used for passing some important informations as group messages which will be helpful especially for teachers or class leaders. A server is to be configured first with the GTAcampuS web-services and database file(available @ http://goo.gl/4Vklkg or in the github repo). The messages will be passed to all those who having their application configured to the same server location. \n
</string>
    <string name="close">Close</string>
    <string name="addnote">ADD NOTE</string>
    <string name="save">Save</string>
    <string name="appsettings_info1">Snooze Time-Out for course alerts             </string>
    <string name="appsettings_info2">Set how much minutes before the class time you need to get alert</string>
    <string name="appsettings_info3">Set Course Alert Time              </string>
    <string name="appsettings_info4">Course Alert Options</string>
    <string name="appsettings_info6">Turn off this option if you don\'t want notifications</string>
    <string name="notifications">Notifications</string>
    <string name="appsettings_info7">Turn off this option if you don\'t want alerts for courses</string>
    <string name="coursealerts">Course Alerts</string>
    <string name="appsettings">Application Settings</string>
    <string name="addalarm">New Alarm / Extra-Class</string>
    <string name="addtask">New Task / Submission</string>
    <string name="noalerts">No Custom Alerts</string>
    <string name="delete">Delete</string>
    <string name="cancel">Cancel</string>
    <string name="alarmoptions_info1">Check this option to stop the alarm by solving a math problem</string>
    <string name="alarmoptions_info2">Math problem on stop</string>
    <string name="alarmoptions_info3">Check this option to snooze the alarm by shaking the device</string>
    <string name="alarmoptions_info4">Snooze mode on shake</string>
    <string name="alarmoptions_info5">Snooze Time-Out\t\t</string>
    <string name="alarmoptions_info6">Check this option to disable snooze option of alarm</string>
    <string name="alarmoptions_info7">Disable Snooze</string>
    <string name="alarmoptions_info8">Snooze Options</string>
    <string name="alarmoptions_info9">Repeat Settings</string>
    <string name="alarmtime">Alarm Time</string>
    <string name="alarmoptions_info10">Enter a title to be displayed</string>
    <string name="alarmtitle">Alarm Title</string>
    <string name="alarmoptions_info11">Enable Alarm</string>
    <string name="alarmsettings">Alarm Settings</string>
    <string name="appsettings_info8">Set Interval Length</string>
    <string name="appsettings_info9">Application won\'t alert for courses after short breaks if previous class is not bunked</string>
    <string name="appsettings_info10">Server Address</string>
    <string name="appsettings_info11">Enter the full path where you\'d hosted the application web-services</string>
</resources>